fix(security): configurar origens permitidas no CORS para Vercel e dev local